Footer and SEO tags and description added

--- a/index.html
+++ b/index.html
@@ -2,15 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
+    <!-- Favicon -->
+    <link rel="icon" href="./public/image.png" />
+
+    <!-- Viewport settings for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- SEO: Title -->
+    <title>Outlead Solutions - Digital Marketing & Web Development Services</title>
+
+    <!-- SEO: Meta Description -->
+    <meta 
+      name="description" 
+      content="Outlead Solutions is a full-service digital marketing company offering email marketing, web development, graphics designing, cold emailing, photoshoots, and more. Grow your business with our expert digital services." 
+    />
+
+    <!-- SEO: Keywords -->
+    <meta 
+      name="keywords" 
+      content="Outlead Solutions, digital marketing, web development, email marketing, cold emailing, graphics designing, photoshoot, branding, digital services, business growth" 
+    />
+
+    <!-- Open Graph Meta Tags for social sharing -->
+    <meta property="og:title" content="Outlead Solutions - Digital Marketing & Web Development" />
+    <meta property="og:description" content="We provide comprehensive digital marketing services including web development, graphics design, email marketing, and more to help grow your business." />
+    <meta property="og:image" content="./public/image.png" />
+    <meta property="og:url" content="https://www.outleadsolutions.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Outlead Solutions - Digital Marketing & Web Development" />
+    <meta name="twitter:description" content="Outlead Solutions offers expert services in email marketing, web development, cold emailing, graphics designing, and photoshoot. We help businesses grow digitally." />
+    <meta name="twitter:image" content="./public/image.png" />
+
+    <!-- Fonts and CSS -->
     <link href="https://fonts.cdnfonts.com/css/graphik-trial" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- React Script -->
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- AOS (Animate On Scroll) Script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
